--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.19",
+    "@types/react-router": "^5.1.17",
+    "@types/react-router-dom": "^5.3.1",
     "antd": "^4.16.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
