--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "inforce-product-list",
+  "homepage": "https://boobzzz.github.io/shop-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -31,6 +32,8 @@
     "start": "react-scripts start",
     "serve": "npx json-server --watch src/data/db.json --port 8000",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -51,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
